--- a/waterfall_model.ipynb
+++ b/waterfall_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcXsI8QwkZLiT7aPp2AtHL",
+      "authorship_tag": "ABX9TyMsnRiIBDfbkOAvZ6SjzW3C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,8 +49,12 @@
       "cell_type": "code",
       "source": [
         "import sys\n",
+        "\n",
         "def solve_quadratic(a, b, c):\n",
         "    \"\"\"Solve the quadratic equation ax^2 + bx + c = 0.\"\"\"\n",
+        "    if a == 0:\n",
+        "        return \"Not a quadratic equation (a cannot be 0).\"\n",
+        "\n",
         "    discriminant = b**2 - 4*a*c\n",
         "\n",
         "    if discriminant > 0:\n",
@@ -66,61 +70,88 @@
         "\n",
         "def hardcoded_input():\n",
         "    \"\"\"Stage 1: Hardcoded variables.\"\"\"\n",
-        "    print(\"Stage 1: Hardcoded Variables\")\n",
-        "    a, b, c = 1, -3, 2\n",
+        "    print(\"\\nStage 1: Hardcoded Variables\")\n",
+        "    a, b, c = 1, -3, 2  # Example values\n",
         "    print(solve_quadratic(a, b, c))\n",
         "\n",
         "\n",
         "def keyboard_input():\n",
         "    \"\"\"Stage 2: Keyboard input.\"\"\"\n",
         "    print(\"\\nStage 2: Keyboard Input\")\n",
-        "    a = float(input(\"Enter coefficient a: \"))\n",
-        "    b = float(input(\"Enter coefficient b: \"))\n",
-        "    c = float(input(\"Enter coefficient c: \"))\n",
-        "    print(solve_quadratic(a, b, c))\n",
+        "    try:\n",
+        "        a = float(input(\"Enter coefficient a: \"))\n",
+        "        b = float(input(\"Enter coefficient b: \"))\n",
+        "        c = float(input(\"Enter coefficient c: \"))\n",
+        "        print(solve_quadratic(a, b, c))\n",
+        "    except ValueError:\n",
+        "        print(\"Invalid input! Please enter numeric values.\")\n",
+        "\n",
+        "\n",
+        "def file_read_verify():\n",
+        "    \"\"\"Stage 3: Verify file existence and readability.\"\"\"\n",
+        "    print(\"\\nStage 3: File Read Verification\")\n",
+        "    try:\n",
+        "        with open(\"input.txt\", \"r\") as file:\n",
+        "            lines = file.readlines()\n",
+        "            if lines:\n",
+        "                print(f\"File read successfully. Number of lines: {len(lines)}\\n\")\n",
+        "                print(\"File Contents:\")\n",
+        "                for line in lines:\n",
+        "                    print(line.strip())  # Display each line\n",
+        "            else:\n",
+        "                print(\"File is empty!\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error reading file: {e}\")\n",
         "\n",
         "\n",
         "def file_input_single():\n",
-        "    \"\"\"Stage 3 and 4: Read from file (single set of inputs).\"\"\"\n",
-        "    print(\"\\nStage 3 and 4: File Input (Single Set)\")\n",
+        "    \"\"\"Stage 4: Process a single set of inputs from file.\"\"\"\n",
+        "    print(\"\\nStage 4: Processing a Single Set of Inputs\")\n",
         "    try:\n",
         "        with open(\"input.txt\", \"r\") as file:\n",
-        "            data = file.readline().split()\n",
-        "            a, b, c = map(float, data)\n",
-        "            print(solve_quadratic(a, b, c))\n",
+        "            first_line = file.readline().strip()\n",
+        "            if first_line:\n",
+        "                a, b, c = map(float, first_line.split())\n",
+        "                print(solve_quadratic(a, b, c))\n",
+        "            else:\n",
+        "                print(\"File is empty!\")\n",
         "    except Exception as e:\n",
         "        print(f\"Error: {e}\")\n",
         "\n",
         "\n",
         "def file_input_multiple():\n",
-        "    \"\"\"Stage 5: Read from file (multiple sets of inputs).\"\"\"\n",
-        "    print(\"\\nStage 5: File Input (Multiple Sets)\")\n",
+        "    \"\"\"Stage 5: Process multiple sets of inputs from file.\"\"\"\n",
+        "    print(\"\\nStage 5: Processing Multiple Sets of Inputs\")\n",
         "    try:\n",
         "        with open(\"input.txt\", \"r\") as file:\n",
         "            for line in file:\n",
-        "                a, b, c = map(float, line.split())\n",
-        "                print(solve_quadratic(a, b, c))\n",
+        "                try:\n",
+        "                    a, b, c = map(float, line.split())\n",
+        "                    print(solve_quadratic(a, b, c))\n",
+        "                except ValueError:\n",
+        "                    print(f\"Skipping invalid line: {line.strip()}\")\n",
         "    except Exception as e:\n",
         "        print(f\"Error: {e}\")\n",
         "\n",
         "\n",
         "def main():\n",
-        "    \"\"\"Main function to execute all stages.\"\"\"\n",
+        "    \"\"\"Main function to execute all stages sequentially.\"\"\"\n",
         "    hardcoded_input()\n",
         "    keyboard_input()\n",
+        "    file_read_verify()\n",
         "    file_input_single()\n",
         "    file_input_multiple()\n",
         "\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    main()"
+        "    main()\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VGa-HAbO7_bd",
-        "outputId": "cc4da036-6b1d-4714-e2b1-7022eb223c3c"
+        "outputId": "a2986393-8f69-45b8-bb58-5cba5e1caf48"
       },
       "execution_count": 2,
       "outputs": [
@@ -128,23 +159,33 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
             "Stage 1: Hardcoded Variables\n",
             "Roots: 2.0, 1.0\n",
             "\n",
             "Stage 2: Keyboard Input\n",
-            "Enter coefficient a: 1\n",
-            "Enter coefficient b: 1\n",
-            "Enter coefficient c: 1\n",
+            "Enter coefficient a: 2\n",
+            "Enter coefficient b: -1\n",
+            "Enter coefficient c: 2\n",
             "No real roots\n",
             "\n",
-            "Stage 3 and 4: File Input (Single Set)\n",
+            "Stage 3: File Read Verification\n",
+            "File read successfully. Number of lines: 4\n",
+            "\n",
+            "File Contents:\n",
+            "1 -3 2\n",
+            "1 -2 1\n",
+            "1 4 5\n",
+            "2 5 -3\n",
+            "\n",
+            "Stage 4: Processing a Single Set of Inputs\n",
             "Roots: 2.0, 1.0\n",
             "\n",
-            "Stage 5: File Input (Multiple Sets)\n",
+            "Stage 5: Processing Multiple Sets of Inputs\n",
             "Roots: 2.0, 1.0\n",
             "Root: 1.0\n",
-            "Roots: 1.0, -1.0\n",
-            "Root: -1.0\n"
+            "No real roots\n",
+            "Roots: 0.5, -3.0\n"
           ]
         }
       ]
