--- a/waterfall_model.ipynb
+++ b/waterfall_model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMsnRiIBDfbkOAvZ6SjzW3C",
+      "authorship_tag": "ABX9TyNipz3Bs2X9B3H8CsTQRxVL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,144 +48,228 @@
     {
       "cell_type": "code",
       "source": [
-        "import sys\n",
+        "def calculate_weather_model(T, H, W):\n",
+        "    weather_value = 0.5 * T**2 - 0.2 * H + 0.1 * W - 15\n",
+        "    return weather_value\n",
         "\n",
-        "def solve_quadratic(a, b, c):\n",
-        "    \"\"\"Solve the quadratic equation ax^2 + bx + c = 0.\"\"\"\n",
-        "    if a == 0:\n",
-        "        return \"Not a quadratic equation (a cannot be 0).\"\n",
-        "\n",
-        "    discriminant = b**2 - 4*a*c\n",
-        "\n",
-        "    if discriminant > 0:\n",
-        "        root1 = (-b + discriminant**0.5) / (2 * a)\n",
-        "        root2 = (-b - discriminant**0.5) / (2 * a)\n",
-        "        return f\"Roots: {root1}, {root2}\"\n",
-        "    elif discriminant == 0:\n",
-        "        root = -b / (2 * a)\n",
-        "        return f\"Root: {root}\"\n",
+        "def categorize_weather(weather_value):\n",
+        "    if weather_value >= 20:\n",
+        "        return \"Sunny\"\n",
+        "    elif 10 <= weather_value < 20:\n",
+        "        return \"Cloudy\"\n",
+        "    elif 0 <= weather_value < 10:\n",
+        "        return \"Rainy\"\n",
         "    else:\n",
-        "        return \"No real roots\"\n",
+        "        return \"Stormy\"\n",
         "\n",
-        "\n",
-        "def hardcoded_input():\n",
-        "    \"\"\"Stage 1: Hardcoded variables.\"\"\"\n",
-        "    print(\"\\nStage 1: Hardcoded Variables\")\n",
-        "    a, b, c = 1, -3, 2  # Example values\n",
-        "    print(solve_quadratic(a, b, c))\n",
-        "\n",
-        "\n",
-        "def keyboard_input():\n",
-        "    \"\"\"Stage 2: Keyboard input.\"\"\"\n",
-        "    print(\"\\nStage 2: Keyboard Input\")\n",
-        "    try:\n",
-        "        a = float(input(\"Enter coefficient a: \"))\n",
-        "        b = float(input(\"Enter coefficient b: \"))\n",
-        "        c = float(input(\"Enter coefficient c: \"))\n",
-        "        print(solve_quadratic(a, b, c))\n",
-        "    except ValueError:\n",
-        "        print(\"Invalid input! Please enter numeric values.\")\n",
-        "\n",
-        "\n",
-        "def file_read_verify():\n",
-        "    \"\"\"Stage 3: Verify file existence and readability.\"\"\"\n",
-        "    print(\"\\nStage 3: File Read Verification\")\n",
-        "    try:\n",
-        "        with open(\"input.txt\", \"r\") as file:\n",
-        "            lines = file.readlines()\n",
-        "            if lines:\n",
-        "                print(f\"File read successfully. Number of lines: {len(lines)}\\n\")\n",
-        "                print(\"File Contents:\")\n",
-        "                for line in lines:\n",
-        "                    print(line.strip())  # Display each line\n",
-        "            else:\n",
-        "                print(\"File is empty!\")\n",
-        "    except Exception as e:\n",
-        "        print(f\"Error reading file: {e}\")\n",
-        "\n",
-        "\n",
-        "def file_input_single():\n",
-        "    \"\"\"Stage 4: Process a single set of inputs from file.\"\"\"\n",
-        "    print(\"\\nStage 4: Processing a Single Set of Inputs\")\n",
-        "    try:\n",
-        "        with open(\"input.txt\", \"r\") as file:\n",
-        "            first_line = file.readline().strip()\n",
-        "            if first_line:\n",
-        "                a, b, c = map(float, first_line.split())\n",
-        "                print(solve_quadratic(a, b, c))\n",
-        "            else:\n",
-        "                print(\"File is empty!\")\n",
-        "    except Exception as e:\n",
-        "        print(f\"Error: {e}\")\n",
-        "\n",
-        "\n",
-        "def file_input_multiple():\n",
-        "    \"\"\"Stage 5: Process multiple sets of inputs from file.\"\"\"\n",
-        "    print(\"\\nStage 5: Processing Multiple Sets of Inputs\")\n",
-        "    try:\n",
-        "        with open(\"input.txt\", \"r\") as file:\n",
-        "            for line in file:\n",
-        "                try:\n",
-        "                    a, b, c = map(float, line.split())\n",
-        "                    print(solve_quadratic(a, b, c))\n",
-        "                except ValueError:\n",
-        "                    print(f\"Skipping invalid line: {line.strip()}\")\n",
-        "    except Exception as e:\n",
-        "        print(f\"Error: {e}\")\n",
-        "\n",
+        "def hardcoded_weather_model():\n",
+        "    T, H, W = 30, 50, 10  # Hardcoded values\n",
+        "    weather_value = calculate_weather_model(T, H, W)\n",
+        "    category = categorize_weather(weather_value)\n",
+        "    print(f\"Hardcoded: W = {weather_value:.2f}, Category = {category}\")\n",
         "\n",
         "def main():\n",
-        "    \"\"\"Main function to execute all stages sequentially.\"\"\"\n",
-        "    hardcoded_input()\n",
-        "    keyboard_input()\n",
-        "    file_read_verify()\n",
-        "    file_input_single()\n",
-        "    file_input_multiple()\n",
-        "\n",
+        "    print(\"Weather Prediction Quadratic Model\")\n",
+        "    hardcoded_weather_model()\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    main()\n"
+        "    main()\n",
+        "\n"
       ],
       "metadata": {
+        "id": "i6l1KQiiZBkz",
+        "outputId": "86d18a40-65b7-4c7c-d712-b538e86d9cfe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "VGa-HAbO7_bd",
-        "outputId": "a2986393-8f69-45b8-bb58-5cba5e1caf48"
+        }
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Weather Prediction Quadratic Model\n",
+            "Hardcoded: W = 426.00, Category = Sunny\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def keyboard_weather_model():\n",
+        "    T = float(input(\"Enter Temperature (T): \"))\n",
+        "    H = float(input(\"Enter Humidity (H): \"))\n",
+        "    W = float(input(\"Enter Wind Speed (W): \"))\n",
+        "    weather_value = calculate_weather_model(T, H, W)\n",
+        "    category = categorize_weather(weather_value)\n",
+        "    print(f\"Keyboard Input: W = {weather_value:.2f}, Category = {category}\")\n",
+        "\n",
+        "def main():\n",
+        "    print(\"Weather Prediction Quadratic Model\")\n",
+        "    keyboard_weather_model()\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "FN2_6A8lZHPD",
+        "outputId": "008f126b-caf7-4939-c307-0588555d0149",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Weather Prediction Quadratic Model\n",
+            "Enter Temperature (T): 22\n",
+            "Enter Humidity (H): 11\n",
+            "Enter Wind Speed (W): 21\n",
+            "Keyboard Input: W = 226.90, Category = Sunny\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def file_weather_model():\n",
+        "    try:\n",
+        "        with open(\"spam.txt\", \"r\") as file:\n",
+        "            lines = file.readlines()\n",
+        "        for idx, line in enumerate(lines):\n",
+        "            T, H, W = map(float, line.strip().split())\n",
+        "            weather_value = calculate_weather_model(T, H, W)\n",
+        "            category = categorize_weather(weather_value)\n",
+        "            print(f\"File Input (Set {idx + 1}): W = {weather_value:.2f}, Category = {category}\")\n",
+        "    except FileNotFoundError:\n",
+        "        print(\"Error: File 'spam.txt' not found.\")\n",
+        "    except ValueError:\n",
+        "        print(\"Error: Invalid data format in 'spam.txt'.\")\n",
+        "\n",
+        "def main():\n",
+        "    print(\"Weather Prediction Quadratic Model\")\n",
+        "    file_weather_model()\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "mRtR-0J8ZOGX",
+        "outputId": "412337a1-66da-4050-b71b-1d8715e8c0d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Weather Prediction Quadratic Model\n",
+            "File Input (Set 1): W = -13.70, Category = Stormy\n",
+            "File Input (Set 2): W = -14.00, Category = Stormy\n",
+            "File Input (Set 3): W = -14.80, Category = Stormy\n",
+            "File Input (Set 4): W = -14.30, Category = Stormy\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def single_input_weather_model():\n",
+        "    T = float(input(\"Enter Temperature (T): \"))\n",
+        "    H = float(input(\"Enter Humidity (H): \"))\n",
+        "    W = float(input(\"Enter Wind Speed (W): \"))\n",
+        "    weather_value = calculate_weather_model(T, H, W)\n",
+        "    category = categorize_weather(weather_value)\n",
+        "    print(f\"Single Input: W = {weather_value:.2f}, Category = {category}\")\n",
+        "\n",
+        "def main():\n",
+        "    print(\"Weather Prediction Quadratic Model\")\n",
+        "    single_input_weather_model()\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n"
+      ],
+      "metadata": {
+        "id": "mZGVVOISZSvP",
+        "outputId": "34e31a3e-9c02-4881-e356-49e00b908770",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Weather Prediction Quadratic Model\n",
+            "Enter Temperature (T): 30\n",
+            "Enter Humidity (H): 50\n",
+            "Enter Wind Speed (W): 10\n",
+            "Single Input: W = 426.00, Category = Sunny\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def multiple_input_weather_model():\n",
+        "    num_sets = int(input(\"Enter number of input sets: \"))\n",
+        "    for i in range(num_sets):\n",
+        "        print(f\"\\nSet {i + 1}:\")\n",
+        "        T = float(input(\"Enter Temperature (T): \"))\n",
+        "        H = float(input(\"Enter Humidity (H): \"))\n",
+        "        W = float(input(\"Enter Wind Speed (W): \"))\n",
+        "        weather_value = calculate_weather_model(T, H, W)\n",
+        "        category = categorize_weather(weather_value)\n",
+        "        print(f\"Set {i + 1}: W = {weather_value:.2f}, Category = {category}\")\n",
+        "\n",
+        "def main():\n",
+        "    print(\"Weather Prediction Quadratic Model\")\n",
+        "    multiple_input_weather_model()\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "yZ-MkXP_ZqHD",
+        "outputId": "dbef1405-dc40-4cda-ee7f-40df16be3e6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Weather Prediction Quadratic Model\n",
+            "Enter number of input sets: 2\n",
             "\n",
-            "Stage 1: Hardcoded Variables\n",
-            "Roots: 2.0, 1.0\n",
+            "Set 1:\n",
+            "Enter Temperature (T): 1\n",
+            "Enter Humidity (H): 2\n",
+            "Enter Wind Speed (W): 3\n",
+            "Set 1: W = -14.60, Category = Stormy\n",
             "\n",
-            "Stage 2: Keyboard Input\n",
-            "Enter coefficient a: 2\n",
-            "Enter coefficient b: -1\n",
-            "Enter coefficient c: 2\n",
-            "No real roots\n",
-            "\n",
-            "Stage 3: File Read Verification\n",
-            "File read successfully. Number of lines: 4\n",
-            "\n",
-            "File Contents:\n",
-            "1 -3 2\n",
-            "1 -2 1\n",
-            "1 4 5\n",
-            "2 5 -3\n",
-            "\n",
-            "Stage 4: Processing a Single Set of Inputs\n",
-            "Roots: 2.0, 1.0\n",
-            "\n",
-            "Stage 5: Processing Multiple Sets of Inputs\n",
-            "Roots: 2.0, 1.0\n",
-            "Root: 1.0\n",
-            "No real roots\n",
-            "Roots: 0.5, -3.0\n"
+            "Set 2:\n",
+            "Enter Temperature (T): 12\n",
+            "Enter Humidity (H): 23\n",
+            "Enter Wind Speed (W): 34\n",
+            "Set 2: W = 55.80, Category = Sunny\n"
           ]
         }
       ]
